2007-06-13  Jonathan Chambers <joncham@gmail.com>
	
	* src/gunicode.c: Add g_unichar_isxdigit and g_unichar_xdigit_value.
	* src/gmisc.c: Add g_win32_getlocale stub.
	* src/glib.h: Add declarations of above functions,
	GFreeFunc typedef, and CLAMP, GUINT_TO_LE, and threading
	macros.
	
	* test/string-util.c: Fix warning.
	* test/utf8.c: Add test for g_unichar_xdigit_value.
	
	Contribution is licensed as MIT/X11.

2007-05-05  Aaron Bockover  <abockover@novell.com>

	* src/gstr.c:
	* src/glib.h: Added g_ascii_tolower implementation; make g_ascii_strdown
	use it to do the transformation

	* test/string-util.c: Added a test for g_ascii_strdown

2007-04-27  Jonathan Chambers <joncham@gmail.com>
	
	* src/gstr.c: Fix off by one error in g_strdup allocation.

2007-04-27  Jonathan Chambers <joncham@gmail.com>
	
	* src/eglib-config.hw: Forgot to add for msvc build.
	* src/vasprintf: Forgot to add for msvc build.

2007-04-27  Jonathan Chambers <joncham@gmail.com>
	
	* src/gstr.c: Fix off by one error for NULL terminator.

2007-04-27  Jonathan Chambers <joncham@gmail.com>
	
	Combined patch from Michael Jerris <mike@jerris.com> and me.
	* winconfig.h: Config file for msvc builds.
	* configure.ac: Add AC_CHECK_HEADERS for getopt.h,  sys/time.h,
	sys/wait.h, and pwd.h.
	
	* src/gspawn.c: Include config.h and use HAVE_* macros.
	* src/eglib-config.h.in: Add inclusion guards.
	* src/ghashtable.c: Fix warnings.
	* src/gmisc.c: Windows implementation of g_getenv, g_setenv,
	and g_unsetenv.
	* src/gpath.c: Include config.h and use HAVE_* macros.
	* src/gmarkup.c: Fix warnings.
	* src/gptrarray.c: Fix warnings.
	* src/gstr.c: Fix warnings and use HAVE_* macros.
	* src/glib.h: Move macros to eglib-config.h and include it.
	* src/gdate.c: Implement g_get_current_time on windows.
	* src/gpattern.c: Fix warnings.
	* src/gdir.c: Implement g_dir on windows.
	* src/gfile.c: Implement mkstemp and g_file_test on windows.
	* src/gtimer.c: Implement g_timer on windows.